@@ -1,6 +1,6 @@
 AC_INIT(src/Makefile.am)
 
-DEVHELP_VERSION=0.1.1
+DEVHELP_VERSION=0.1.99
 
 BONOBO_REQUIRED=1.0.0
 GCONF_REQUIRED=1.0.4
